--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+    <jersey.version>1.19</jersey.version>
   </properties>
 
   <dependencies>
@@ -25,6 +26,13 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>2.5</version>
+      <scope>provided</scope>
+	</dependency>
     
     <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
 	<dependency>
@@ -41,14 +49,40 @@
     <version>1.0.0</version>
 	</dependency>
 	
-	<!-- https://mvnrepository.com/artifact/com.google.inject/guice -->
 	<dependency>
-	    <groupId>com.google.inject</groupId>
-	    <artifactId>guice</artifactId>
-	    <version>4.0</version>
+      <groupId>com.sun.jersey</groupId>
+      <artifactId>jersey-server</artifactId>
+      <version>${jersey.version}</version>
 	</dependency>
-	
 
+	<dependency>
+ 		<groupId>com.sun.jersey</groupId>
+ 		<artifactId>jersey-server</artifactId>
+ 		<version>${jersey.version}</version>
+ 	</dependency>
+
+	<!-- Includes Guice Dependency -->
+ 	<dependency>
+		 <groupId>com.sun.jersey.contribs</groupId>
+		 <artifactId>jersey-guice</artifactId>
+		 <version>${jersey.version}</version>
+	</dependency>
+
+        <!--  Test Dependencies  -->
+
+	<dependency>
+		 <groupId>com.sun.jersey</groupId>
+		 <artifactId>jersey-client</artifactId>
+		 <version>${jersey.version}</version>
+		 <scope>test</scope>
+	</dependency> 
+
+	<dependency>
+		 <groupId>com.sun.jersey</groupId>
+		 <artifactId>jersey-grizzly2</artifactId>
+		 <version>${jersey.version}</version>
+		 <scope>test</scope>
+ 	</dependency>
   </dependencies>
 
   <build>
@@ -112,6 +146,22 @@
 			</execution>
 		</executions>
 	</plugin>
+		 <plugin>
+			 <groupId>org.mortbay.jetty</groupId>
+			 <artifactId>maven-jetty-plugin</artifactId>
+			 <version>7.0.0pre3</version>
+			 <configuration>
+			 <scanIntervalSeconds>10</scanIntervalSeconds>
+			 <connectors>
+			 <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
+			 <port>8080</port>
+			 <maxIdleTime>60000</maxIdleTime>
+			 </connector>
+			 </connectors>
+			 <stopKey/>
+			 <stopPort/>
+			 </configuration>
+		  </plugin>
       </plugins>
     </pluginManagement>
   </build>
