--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,12 @@
 		 <version>${jersey.version}</version>
 		 <scope>test</scope>
  	</dependency>
+ 	
+ 	<dependency>
+	    <groupId>com.sun.jersey</groupId>
+	    <artifactId>jersey-json</artifactId>
+	    <version>${jersey.version}</version>
+	</dependency>
   </dependencies>
 
   <build>
