--- a/pom.xml
+++ b/pom.xml
@@ -20,12 +20,6 @@
   </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
-    </dependency>
     
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -35,13 +29,12 @@
 	</dependency>
     
     <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
-	<dependency>
-	    <groupId>org.junit.jupiter</groupId>
-	    <artifactId>junit-jupiter-api</artifactId>
-	    <version>5.3.1</version>
-	    <scope>test</scope>
-	</dependency>
-    
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-engine</artifactId>
+        <version>5.2.0</version>
+        <scope>test</scope>
+    </dependency>
     
     <dependency>
     <groupId>net.codebox</groupId>
