--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: java
 sudo: false # faster builds
 
+script:
+ - mvn clean package
+ - mvn cobertura:cobertura
+
 after_success:
   - bash <(curl -s https://codecov.io/bash)
